Complete review items for #1413 plus-in-path fix: changelog, test, release-9 fix
Addresses Thrameos's review on the original PR: adds a CHANGELOG entry and
a regression test exercising a classpath jar whose containing directory has
"+", "&", "=", and "#" in its path (all four round-trip correctly through
the existing single-character "+" fix; empirically verified "&"/"="/"#" were
never mishandled by URLDecoder in the first place, so no extra escaping was
needed for those).

Also fixes a real compile break the original commit introduced:
URLDecoder.decode(String, Charset) requires Java 10+, but this module
targets --release 9 (pom.xml/build.xml both build at that level), so it
never actually compiled under the project's real build. Switched to the
Java 9-compatible URLDecoder.decode(String, String) overload, which the
surrounding catch-all handles identically.

Co-Authored-By: Claude Sonnet 5 <noreply@anthropic.com>